# Crawl_Tools

./: .env.example  .gitignore  Demand.md  README.md  pyproject.toml
crawl_tools/: cli.py  credentials.py  loader.py  output.py  schema.py
crawl_tools/compiler/: codegen.py
crawl_tools/runtime/: actions.py  browser.py  executor.py
docs/superpowers/plans/: 2026-06-15-crawl-tools-prototype.md
docs/superpowers/specs/: 2026-06-14-crawl-tools-design.md
jobs/: erp-a-sales.yaml
tests/: test_actions.py  test_browser.py  test_browser_integration.py  test_cli.py  test_codegen.py  test_credentials.py  test_e2e_sample.py  test_executor.py  test_loader.py  test_output.py  test_schema.py
tests/fixtures/: erp-a.yaml  job.yaml  sample_site.html
