[project]
name = "crawl-tools"
version = "0.1.0"
description = "YAML-driven web crawler: process description -> Playwright code -> data download"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "typer>=0.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
crawl = "crawl_tools.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawl_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: integration tests requiring a real browser"]
addopts = "-m 'not slow'"
